# mame-data-manager

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  sonar-project.properties
.github/workflows/: build.yml
docs/: README.md
docs/functionalities/: README.md  data-exporting.md  data-filtering.md  file-downloading.md  file-reading.md  statistics.md
docs/input-files/: README.md  catver.ini.md  history.xml.md  languages.ini.md  mame.dat.md  nplayers.ini.md  resources.dat.md  series.ini.md
docs/schemas/: README.md  csv-schema.md  json-schema.md  sqlite-schema.md
src/: data_types.rs  main.rs  models.rs
src/core/: data.rs  data_types.rs  mod.rs  models.rs
src/core/filters/: filter_categories.rs  filter_genres.rs  filter_non_games.rs  machine_names_normalization.rs  machines_filtering.rs  manufacturer_refactor.rs  manufacturers_normalization.rs  mod.rs  name_refactor.rs  non_game_categories_removal.rs  nplayers_normalization.rs  nplayers_refactor.rs
src/core/readers/: catver_reader.rs  history_reader.rs  languages_reader.rs  mame_reader.rs  mod.rs  nplayers_reader.rs  resources_reader.rs  series_reader.rs
src/core/writers/: csv_writer.rs  db_writer.rs  json_writer.rs  mod.rs
src/helpers/: data_source_helper.rs  file_download_helper.rs  file_extractor_helper.rs  fs_helper.rs  mod.rs  ui_helper.rs
src/modules/: data_export.rs  data_filtering.rs  data_import.rs  data_stats.rs  input_data_management.rs  mod.rs
src/readers/: catver_reader.rs  history_reader.rs  languages_reader.rs  mame_reader.rs  mod.rs  nplayers_reader.rs  series_reader.rs
