[package]
name = "mame_data_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
indicatif = "0.16"
dialoguer = "0.9"
scraper = "0.13"
url = "2.2"
lazy_static = "1.4"
zip = "0.5.13"
sevenz-rust = "0.6.1"
regex = "1.5.4"
walkdir = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6.0"
xml-rs = "0.8"
quick-xml = "0.23"
roxmltree = "0.14"
serde_derive = "1.0"
console = "0.14.1"
prettytable-rs = "^0.10"
num-format = "0.4.4"