[package]
name = "mame-data-manager"
version = "0.7.2"
edition = "2021"
authors = ["Ruben Sosenke <rsosenke@gmail.com>"]
description = "Tool for managing and processing MAME data, including parsing files, querying information, and exporting in various formats."
license = "MIT"

[dependencies]
indicatif = "0.16"
dialoguer = "0.9"
lazy_static = "1.4"
console = "0.14.1"
prettytable-rs = "^0.10"
num-format = "0.4.4"
mame-parser = "0.7.2"